[project]
name = "research-pulse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "qdrant-client>=1.16.2",
    "requests>=2.32.5",
    "selenium>=4.39.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.2",
    "webdriver-manager>=4.0.2",
]
